        PR c++/5388         * call.c (conditional_conversion): Don't consider implicit         conversions if T2 is a base of T1.         * cp-tree.h (DERIVED_FROM_P, UNIQUELY_DERIVED_FROM_P): Make boolean.         (ACCESSIBLY_UNIQUELY_DERIVED_P, PUBLICLY_UNIQUELY_DERIVED_P): Likewise.

* parser.c (cp_parser_primary_expression): Convert a static data
        member from reference.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@66844 138bc75d-0d04-0410-961f-82ee72b054a4